infra/k8s/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  clusterIP: None # headless — standard for a StatefulSet, gives stable pod DNS
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
